--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -10,7 +10,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-   
+
         <LinearLayout
             android:id="@+id/titleLayout"
             android:layout_width="match_parent"
@@ -1096,7 +1096,8 @@
                                 android:text="@string/action_adventure"
                                 android:textColor="@color/green_off"
                                 android:textSize="10sp"
-                                android:textStyle="bold" />
+                                android:textStyle="bold"
+                                tools:ignore="SmallSp"/>
 
                             <ImageView
                                 android:layout_width="20dp"
@@ -1142,8 +1143,8 @@
                                 android:text="@string/free_to_play"
                                 android:textAllCaps="false"
                                 android:textColor="@color/white"
-                                android:textSize="6sp" />
-
+                                android:textSize="6sp"
+                                tools:ignore="SmallSp"/>
 
                         </LinearLayout>
 
@@ -1155,7 +1156,8 @@
                             android:layout_marginEnd="10dp"
                             android:text="@string/grand_theft_auto_v_and_gta_online_n_now_upgraded_for_playstation_5_and_xbox"
                             android:textColor="@color/gray"
-                            android:textSize="10sp" />
+                            android:textSize="10sp"
+                            tools:ignore="SmallSp"/>
 
                         <Button
                             android:layout_width="match_parent"
@@ -1169,11 +1171,10 @@
                             android:textAllCaps="false"
                             android:textColor="@color/white"
                             android:textSize="10sp"
-                            android:textStyle="normal" />
-
+                            android:textStyle="normal"
+                            tools:ignore="SmallSp" />
 
                     </LinearLayout>
-
 
                 </androidx.cardview.widget.CardView>
             </LinearLayout>
