--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -68,17 +68,18 @@
         android:id="@+id/btn_continue"
         android:layout_width="250dp"
         android:layout_height="60dp"
-        android:textAllCaps="false"
+        android:backgroundTint="@color/green"
+        android:clickable="true"
         android:text="@string/get_started"
-        android:textColor="@color/white"
+        android:textAllCaps="false"
+        android:textColor="#ffffff"
         android:textSize="15sp"
         android:textStyle="bold"
-        android:clickable="true"
-        android:backgroundTint="@color/green"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/textView2"
         app:layout_constraintStart_toStartOf="@+id/textView2"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        app:layout_constraintTop_toBottomOf="@+id/textView2"
+        tools:ignore="TextContrastCheck" />
 
 
 
